<resources>
    <string name="app_name">Balai Center</string>

    <string name="general">General</string>
    <string name="informasi">Informasi</string>
    <string name="informasi_baru"> Tambah Info</string>
    <string name="detailpesan">Detail Info</string>
    <string name="laporan">Laporan</string>
    <string name="Akun">Akun</string>
    <string name="nama">Nama</string>
    <string name="role">Role</string>
    <string name="gantipassword">Ganti Password</string>

    <string name="infoterkirim">Info Terkirim</string>
    <string name="infoditerima">Info Diterima</string>
    <string name="infokirim">Kirim Info</string>

    <string name="suratditerima">Surat Diterima</string>
    <string name="laporansaya">Laporan Saya</string>
    <string name="semualaporan">Semua Laporan</string>
    <string name="detailsurat">Detail Surat</string>
    <string name="detaillaporan">Detail Laporan</string>

    <string name="nosurat">Nomor Surat</string>
    <string name="tempat">Tempat</string>
    <string name="waktu">Waktu</string>
    <string name="perihal">Perihal</string>
    <string name="durasi">Durasi</string>
    <string name="kategori">Kategori</string>
    <string name="buatlaporan">Buat Laporan</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggapan">Tanggapan</string>
    <string name="semua">Semua</string>

    <string name="nointernet">Tidak dapat terhubung ke jaringan. Silahkan coba lagi</string>
    <string name="notujuaninfo">Tidak ada tujuan info yang dipilih</string>

    <string name="browse">Browse</string>

    <string name="kirim">Kirim</string>
    <string name="harus_diisi">Harus diisi</string>

    <string name="hapus">Hapus</string>

    <string name="title_activity_login">Sign in</string>
    <string name="salahnip">NIP anda tidak terdaftar</string>
    <string name="salahpassword">Password anda salah</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="logout">Logout</string>
    <string name="nip">NIP</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="ganti">Ganti</string>
    <string name="cancel">Cancel</string>

    <string name="passlama">Password Lama</string>
    <string name="passbaru">Password Baru</string>
    <string name="retypepassbaru">Ketik Ulang Password Baru</string>

    <string name="foto">Foto</string>
    <string name="nullfoto">Tidak ada foto yang dilampirkan</string>
    <string name="errorfoto">Terjadi kesalahan. Foto tidak dapat dimuat</string>
    <string name="kirimke">Kirim ke</string>
    <string name="pengirim">Pengirim</string>
    <string name="pesan">Pesan</string>
    <string name="tanggal">Tanggal</string>
    <string name="dibacaoleh">Sudah dibaca oleh</string>
    <string name="tidakdibaca">(Belum ada yang membaca info ini)</string>

    <string name="deleteinfoconfirm">Apa anda yakin ingin menghapus info ini?</string>
    <string name="hapusinfo">Hapus Info</string>


    <!--Role-->
    <string name="admin">Admin</string>
    <string name="pengawas">Pengawas</string>
    <string name="karyawan">Karyawan</string>

    <string name="fungsional">Fungsional</string>
    <string name="pamong">Pamong</string>
    <string name="program">Program</string>
    <string name="sik">SIK</string>
    <string name="psd">PSD</string>
    <string name="subbag">Subbag</string>
    <string name="wiyata">Wiyata</string>
</resources>
