<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informasi.InformasiTambahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/informasi"
                    android:fontFamily="sans-serif-medium"/>

                <EditText
                    android:inputType="text|textMultiLine"
                    android:id="@+id/tambah_info_edittext_informasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="16sp"
                    android:layout_margin="10dp"
                    android:text="@string/foto" />

                <ImageView
                    android:id="@+id/tambah_info_imageview_foto"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="250dp" />

                <Button
                    android:id="@+id/tambah_info_button_foto"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Browse"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="16sp"
                    android:text="@string/kirimke" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_fungsional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fungsional" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_pamong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pamong" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_program"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_sik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sik" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_psd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psd" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_subbag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subbag" />

                <CheckBox
                    android:id="@+id/tambah_info_checkbox_wiyata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wiyata" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>
</ScrollView>
